# abiword-mk

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure.ac  configure~  libabiword.pc  libtool  plugin-builtin.m4  plugin-configure.m4  plugin-list.m4  plugin-makefiles.m4
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  output.8  requests  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
goffice-bits/: Makefile  Makefile.in
goffice-bits2/: Makefile  Makefile.in
icons/: Makefile  Makefile.in
plugins/: Makefile  Makefile.in
plugins/aiksaurus/: Makefile  Makefile.in
plugins/applix/: Makefile  Makefile.in
plugins/babelfish/: Makefile  Makefile.in
plugins/bmp/: Makefile  Makefile.in
plugins/clarisworks/: Makefile  Makefile.in
plugins/collab/: Makefile  Makefile.in
plugins/command/: Makefile  Makefile.in
plugins/docbook/: Makefile  Makefile.in
plugins/eml/: Makefile  Makefile.in
plugins/epub/: Makefile  Makefile.in
plugins/freetranslation/: Makefile  Makefile.in
plugins/garble/: Makefile  Makefile.in
plugins/gda/: Makefile  Makefile.in
plugins/gdict/: Makefile  Makefile.in
plugins/gimp/: Makefile  Makefile.in
po/: Makefile  Makefile.in  cy-GB.strings  en-AU.strings  en-CA.strings  en-IE.strings  fi-FI.strings  ru-RU.strings  sk-SK.strings  sq-AL.strings  sr.strings
src/: Makefile  Makefile.in  Win32Resources.lo
src/af/: Makefile  (+1 more)
tools/: Makefile  Makefile.in
user/: Makefile  Makefile.in
(+1574 files in other folders)
